--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-
-.container {
-  font-size:32pt;
-/*  padding-top:20px;*/
-}
-
 a {
   text-decoration:none;
 }
@@ -13,4 +7,13 @@ ul {
 
 .ul.li.a{
   
+}
+
+.container {
+  font-size:32pt;
+/*  padding-top:20px;*/
+}
+
+.neglected {
+  font-size: .3em;
 }
